# graphed

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  wheels.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M11/: attempts.md
.graphed/M12/: attempts.md
.graphed/M13/: attempts.md
.graphed/M14/: attempts.md
.graphed/M15/: attempts.md  refreeze-M32.md
.graphed/M17/: attempts.md
.graphed/M2/: attempts.md
.graphed/M20/: attempts.md
.graphed/M22/: attempts.md
.graphed/M23/: attempts.md
.graphed/M3/: attempts.md
.graphed/M35/: attempts.md
.graphed/M5/: attempts.md
.graphed/m40/disputes/: frozen_pack_key_windows_env.md
.graphed/m41/disputes/: frozen_format.md
docs/: api.rst  architecture.rst  conf.py  design.rst  index.rst
docs/awkward/: api.rst  conf.py  design.rst  improvements.rst  index.rst
docs/checkpoint/: design.rst  improvements.rst  index.rst
docs/core/: api.rst  conf.py  design.rst  improvements.rst  index.rst
docs/corpus/: index.rst
docs/corpus/requirements/: ops_catalog.md
docs/debug/: design.rst  index.rst
docs/frontend/: api.rst  conf.py  design.rst  improvements.rst  index.rst
docs/numpy/: design.rst  improvements.rst  index.rst
docs/preserve/: design.rst  improvements.rst  index.rst
python/graphed/: __init__.py  aggregate.py  array.py  backend.py  execute.py  parquet.py  projection.py  provenance.py  session.py  shuffle.py  write.py
python/graphed/awkward/: __init__.py  _ops.py  backend.py  functions.py  io.py  join.py  payloads.py  projection.py  shuffle.py
python/graphed/checkpoint/: __init__.py  errors.py  retry.py  runner.py  store.py
python/graphed/core/: __init__.py  __init__.pyi  execution.py  graphed_core.pyi  plan.py
python/graphed/debug/: _sampler.py  errors.py
python/graphed/debug/dashboard/: __init__.py  _client.py  _dashboard.py  _server.py  _wire.py
python/graphed/numpy/: __init__.py  array.py  creation.py  gufunc.py  io.py  projection.py  random.py  shuffle.py
python/graphed/preserve/: bundle.py
scripts/: advance.py  run-tests.sh
src/: lib.rs  node.rs  serialize.rs  store.rs
src/graphed/: __init__.py  array.py  errors.py  parquet.py  projection.py  provenance.py  session.py  write.py
src/optimizer/: mod.rs
tests/extra/checkpoint/m8/: test_kill_after_guard.py
tests/extra/frontend/m13/: test_not_iterable.py
tests/extra/numpy/m13/: test_handler_argument_errors.py
tests/extra/numpy/m15/: test_pandas_free.py
tests/frozen/awkward/m10/: test_buffer_projection.py
tests/frozen/awkward/m11/: test_functions_only_idiom.py
tests/frozen/awkward/m15/: test_parquet_io.py
tests/frozen/awkward/m16/: m16_helpers.py  test_reducers.py  test_structural_rule.py  test_ufunc_tier.py
tests/frozen/awkward/m17/: test_structure_ops.py
tests/frozen/awkward/m18/: test_behaviors.py
tests/frozen/awkward/m19/: test_conveniences.py
tests/frozen/awkward/m21/: test_partitioned_writer.py
tests/frozen/awkward/m24/: test_interface_parity.py
tests/frozen/awkward/m28/: test_preservable_externals.py
tests/frozen/awkward/m3/: analyses.py  test_dispatch.py  test_eval.py  test_integration_adl.py  test_metadata_only.py  test_payloads.py  test_provenance.py  test_recording.py
tests/frozen/awkward/m39/: README.md  golden_route.py  test_exchange_primitives.py
tests/frozen/awkward/m40/: README.md  test_grouped.py  test_join_key_nonoption.py  test_join_null_key.py  test_join_primitives.py  test_join_routing_golden.py  test_merge_records_shared_nonkey.py  test_pack_key.py  test_pack_key_overflow_guard.py  test_projection.py
tests/frozen/awkward/m5/: test_no_overtouch.py  test_projection.py  test_topologies.py
tests/frozen/awkward/m9/: test_generic_external.py
tests/frozen/checkpoint/m39/: README.md  shuffle_analyses.py  test_multistage_journal.py  test_shuffle_resume.py
tests/frozen/checkpoint/m8/: analyses.py  deployment.py  test_codec.py  test_deployment.py  test_errors.py  test_no_source.py  test_realistic.py  test_resume.py  test_store.py
tests/frozen/core/m1/: test_determinism_and_guardrails.py  test_external.py  test_interning.py  test_property.py  test_threadsafe.py
tests/frozen/core/m10/: test_blind_partition.py  test_incremental_reducer.py  test_maximal_fusion.py  test_sound_rules.py  test_stage_members.py
tests/frozen/core/m22/: test_output_scoped_reduction.py
tests/frozen/core/m32/: test_sequential_runner.py
tests/frozen/core/m33/: test_bounded_resources.py
tests/frozen/core/m37/: test_monitor_seam.py
tests/frozen/core/m39/: README.md  test_durable_plan_v2.py  test_exchange_ir.py  test_exchange_serialize.py  test_shuffle_backend_protocol.py
tests/frozen/core/m4/: test_benchmark.py  test_reduce.py  test_systematics.py  test_topologies.py
tests/frozen/core/m40/: README.md  test_join_ir.py  test_join_plan.py  test_join_serialize.py
tests/frozen/core/m41/: README.md  test_cluster_seam_contract.py
tests/frozen/core/m7/: test_execution_contract.py
tests/frozen/core/m8/: test_deployment.py  test_durable_plan.py  test_ir_serialization.py
tests/frozen/core/m9/: test_introspection.py
tests/frozen/corpus/m05/: conftest.py  test_catalog.py  test_determinism.py  test_fixtures_reproduce.py  test_systematics.py
tests/frozen/frontend/m3/: toy.py  (+3 more)
tests/frozen/m10/: m10_toy.py
tests/frozen/m11/: README.md  m11_toy.py  test_array_function.py  test_array_meta.py  test_ufunc_surface.py
tests/frozen/m12/: README.md  m12_toy.py  test_reduction_surface.py
tests/frozen/m13/: test_getitem_surface.py
tests/frozen/m14/: m14_toy.py
tests/frozen/m15/: test_parquet_base.py
tests/frozen/m17/: m17_toy.py
tests/frozen/m2/: test_backend_independence.py  test_external.py  test_recording.py
tests/frozen/m20/: README.md  test_write_base.py
tests/frozen/m22/: test_output_scoped_compiles.py
tests/frozen/m23/: README.md
tests/frozen/m3/: test_topologies.py
tests/frozen/m5/: test_projection_support.py
tests/frozen/m8/: test_serialized_ir.py
(+104 files in other folders)
