[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphed"
version = "0.0.1"
description = "Deferred-array frontend for graphed: Backend protocol, builder, provenance (records into graphed-core)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "graphed-org" }]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# graphed-core is installed from its repo (see CI / CONTRIBUTING); not on PyPI yet.
dependencies = ["graphed-core", "executing>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis", "mypy", "ruff", "numpy>=1.24", "pyarrow>=15"]
docs = ["sphinx", "furo"]
parquet = ["pyarrow>=15"]

[project.urls]
Homepage = "https://github.com/graphed-org/graphed-mvp"

[tool.hatch.build.targets.wheel]
packages = ["src/graphed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/frozen/m2", "tests/frozen/m3", "tests/frozen/m10", "tests/frozen/m11", "tests/frozen/m12", "tests/frozen/m13", "tests/frozen/m14", "tests/frozen/m15", "tests/frozen/m17"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["graphed"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 110
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PLC0415"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# pyarrow is the OPTIONAL parquet extra; its inline types drag sphinx sources (3.12-only syntax)
# into a 3.11-pinned strict run. Treat it as untyped at the boundary (same policy as numpy in
# graphed-numpy). Not a gate change: our own sources stay --strict.
[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"
